--- a/packages/@som/blog/package.json
+++ b/packages/@som/blog/package.json
@@ -32,29 +32,31 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.12.5",
-    "@cloudbase/js-sdk": "^1.3.3",
-    "@cloudbase/node-sdk": "^2.4.7",
-    "@fortawesome/fontawesome-svg-core": "^1.2.32",
-    "@fortawesome/free-brands-svg-icons": "^5.15.1",
-    "@fortawesome/free-regular-svg-icons": "^5.15.1",
-    "@fortawesome/free-solid-svg-icons": "^5.15.1",
+    "@cloudbase/js-sdk": "^1.4.0",
+    "@cloudbase/node-sdk": "^2.5.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.34",
+    "@fortawesome/free-brands-svg-icons": "^5.15.2",
+    "@fortawesome/free-regular-svg-icons": "^5.15.2",
+    "@fortawesome/free-solid-svg-icons": "^5.15.2",
     "@fortawesome/vue-fontawesome": "^2.0.2",
     "@nuxt/content": "^1.11.1",
     "@nuxtjs/apollo": "4.0.1-rc.4",
     "@nuxtjs/sitemap": "^2.4.0",
     "@nuxtjs/tailwindcss": "^3.4.1",
-    "@tailwindcss/typography": "^0.3.1",
-    "apollo-server-express": "^2.19.0",
+    "@tailwindcss/typography": "^0.4.0",
+    "apollo-server-express": "^2.19.2",
     "axios": "^0.21.0",
     "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.5",
     "core-js": "^3.8.2",
-    "cos-js-sdk-v5": "^1.1.7",
+    "cos-js-sdk-v5": "^1.1.8",
     "dayjs": "^1.10.2",
     "dotenv": "^8.2.0",
     "dplayer": "^1.26.0",
-    "element-ui": "^2.14.1",
+    "element-ui": "^2.15.0",
     "etag": "^1.8.1",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "fs-extra": "^9.0.1",
     "gemoji": "^6.1.0",
     "graphql": "14.7.0",
@@ -62,18 +64,19 @@
     "gsap": "^3.5.1",
     "js-cookie": "^2.2.1",
     "lodash": "^4.17.20",
-    "mongoose": "^5.11.10",
+    "mongoose": "^5.11.12",
     "nuxt": "^2.14.12",
     "nuxt-ssr-cache": "^1.5.2",
     "passport": "^0.4.1",
     "passport-github2": "^0.1.12",
     "qrcode.vue": "^1.7.0",
+    "session-file-store": "^1.5.0",
     "sitemap": "^6.3.3",
-    "socket.io-client": "^3.0.5",
+    "socket.io-client": "^3.1.0",
     "svg4everybody": "^2.1.9",
     "tailwindcss-dark-mode": "^1.1.7",
     "uuid": "^8.3.2",
-    "vant": "^2.12.2",
+    "vant": "^2.12.4",
     "vue-aplayer": "^1.6.1",
     "vue-baidu-map": "^0.21.22"
   },
@@ -89,7 +92,7 @@
     "@rollup/plugin-alias": "^3.1.1",
     "@rollup/plugin-commonjs": "^17.0.0",
     "@rollup/plugin-json": "^4.1.0",
-    "@rollup/plugin-node-resolve": "^11.0.1",
+    "@rollup/plugin-node-resolve": "^11.1.0",
     "@rollup/plugin-replace": "^2.3.4",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.2",
@@ -99,7 +102,7 @@
     "cli-progress": "^3.8.2",
     "cos-nodejs-sdk-v5": "^2.8.6",
     "cross-env": "^7.0.3",
-    "eslint": "^7.17.0",
+    "eslint": "^7.18.0",
     "eslint-config-prettier": "^7.1.0",
     "eslint-plugin-nuxt": "^2.0.0",
     "eslint-plugin-prettier": "^3.3.1",
@@ -108,7 +111,7 @@
     "less": "^4.0.0",
     "less-loader": "^7.2.1",
     "prettier": "^2.2.1",
-    "rollup": "^2.36.1",
+    "rollup": "^2.36.2",
     "sass": "^1.32.2",
     "sass-loader": "^10.1.0",
     "serverless-config-generator": "^1.0.4",
