--- a/packages/@som/blog/package.json
+++ b/packages/@som/blog/package.json
@@ -51,6 +51,7 @@
     "core-js": "^3.8.2",
     "cos-js-sdk-v5": "^1.1.8",
     "dayjs": "^1.10.2",
+    "dompurify": "^2.2.6",
     "dotenv": "^8.2.0",
     "dplayer": "^1.26.0",
     "element-ui": "^2.15.0",
@@ -59,11 +60,13 @@
     "express-session": "^1.17.1",
     "fs-extra": "^9.0.1",
     "gemoji": "^6.1.0",
+    "github-markdown-css": "^4.0.0",
     "graphql": "14.7.0",
     "graphql-tag": "^2.11.0",
     "gsap": "^3.5.1",
     "js-cookie": "^2.2.1",
     "lodash": "^4.17.20",
+    "marked": "^1.2.7",
     "mongoose": "^5.11.12",
     "nuxt": "^2.14.12",
     "nuxt-ssr-cache": "^1.5.2",
