feat: add sentry for node and vue client

--- a/packages/@som/blog/.env.example
+++ b/packages/@som/blog/.env.example
@@ -34,3 +34,8 @@ PRIVATE_REPOSITORY_PATH=xxxxxxxxxxxxxxxxxxxxxxxx
 
 // SESSION SECRET
 SESSION_SECRET=xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+
+// SENTRY_VUE_DSN
+SENTRY_VUE_DSN=https://xxx.ingest.sentry.io/xxx
+// SENTRY_NUXT_DSN
+SENTRY_NUXT_DSN=https://xxx.ingest.sentry.io/xxx
