--- a/packages/@som/blog/package.json
+++ b/packages/@som/blog/package.json
@@ -42,8 +42,12 @@
     "@fortawesome/vue-fontawesome": "^2.0.2",
     "@nuxt/content": "^1.11.1",
     "@nuxtjs/apollo": "4.0.1-rc.4",
+    "@nuxtjs/sentry": "^5.0.0",
     "@nuxtjs/sitemap": "^2.4.0",
     "@nuxtjs/tailwindcss": "^3.4.1",
+    "@sentry/node": "^6.0.1",
+    "@sentry/tracing": "^6.0.1",
+    "@sentry/vue": "^6.0.1",
     "@tailwindcss/typography": "^0.4.0",
     "apollo-server-express": "^2.19.2",
     "axios": "^0.21.0",
