--- a/packages/@som/blog/.env.example
+++ b/packages/@som/blog/.env.example
@@ -36,6 +36,6 @@ PRIVATE_REPOSITORY_PATH=xxxxxxxxxxxxxxxxxxxxxxxx
 SESSION_SECRET=xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
 
 // SENTRY_VUE_DSN
-SENTRY_VUE_DSN=https://xxx.ingest.sentry.io/xxx
+// SENTRY_VUE_DSN=https://xxx.ingest.sentry.io/xxx
 // SENTRY_NUXT_DSN
 SENTRY_NUXT_DSN=https://xxx.ingest.sentry.io/xxx
