chore: upgrade deps

--- a/packages/@som/blog/package.json
+++ b/packages/@som/blog/package.json
@@ -19,6 +19,7 @@
     "build:local": "cross-env SLS_ENV=test nuxt build",
     "build:sls": "cross-env SLS_ENV=release nuxt build",
     "start:sls": "cross-env SLS_ENV=release nuxt start",
+    "start":"cross-env SLS_ENV=release NODE_ENV=production node --inspect=9229 dist/listener.js",
     "build:server": "cross-env NODE_ENV=production rollup -c",
     "deploy": "npm run gen && npm run build:server && npm run build:sls && npm run deploy:cdn && serverless deploy",
     "deploy:layer": "node ./scripts/deployLayer.js",
@@ -45,17 +46,17 @@
     "@nuxtjs/sentry": "^5.0.0",
     "@nuxtjs/sitemap": "^2.4.0",
     "@nuxtjs/tailwindcss": "^3.4.1",
-    "@sentry/node": "^6.0.1",
-    "@sentry/tracing": "^6.0.1",
-    "@sentry/vue": "^6.0.1",
+    "@sentry/node": "^6.0.2",
+    "@sentry/tracing": "^6.0.2",
+    "@sentry/vue": "^6.0.2",
     "@tailwindcss/typography": "^0.4.0",
     "apollo-server-express": "^2.19.2",
     "axios": "^0.21.0",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
-    "core-js": "^3.8.2",
-    "cos-js-sdk-v5": "^1.1.8",
-    "dayjs": "^1.10.2",
+    "core-js": "^3.8.3",
+    "cos-js-sdk-v5": "^1.1.10",
+    "dayjs": "^1.10.4",
     "dompurify": "^2.2.6",
     "dotenv": "^8.2.0",
     "dplayer": "^1.26.0",
@@ -63,7 +64,7 @@
     "etag": "^1.8.1",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
-    "fs-extra": "^9.0.1",
+    "fs-extra": "^9.1.0",
     "gemoji": "^6.1.0",
     "github-markdown-css": "^4.0.0",
     "graphql": "14.7.0",
@@ -72,7 +73,7 @@
     "js-cookie": "^2.2.1",
     "lodash": "^4.17.20",
     "marked": "^1.2.7",
-    "mongoose": "^5.11.12",
+    "mongoose": "^5.11.13",
     "nuxt": "^2.14.12",
     "nuxt-ssr-cache": "^1.5.2",
     "passport": "^0.4.1",
@@ -84,7 +85,7 @@
     "svg4everybody": "^2.1.9",
     "tailwindcss-dark-mode": "^1.1.7",
     "uuid": "^8.3.2",
-    "vant": "^2.12.4",
+    "vant": "^2.12.5",
     "vue-aplayer": "^1.6.1",
     "vue-baidu-map": "^0.21.22"
   },
@@ -93,7 +94,7 @@
     "@babel/core": "^7.12.10",
     "@babel/plugin-transform-runtime": "^7.12.10",
     "@babel/preset-env": "^7.12.11",
-    "@cloudbase/manager-node": "^3.8.2",
+    "@cloudbase/manager-node": "^3.8.3",
     "@nuxt/types": "^2.14.12",
     "@nuxtjs/eslint-config": "^5.0.0",
     "@nuxtjs/google-analytics": "^2.4.0",
@@ -108,27 +109,27 @@
     "babel-plugin-import": "^1.13.3",
     "builtin-modules": "^3.1.0",
     "cli-progress": "^3.8.2",
-    "cos-nodejs-sdk-v5": "^2.8.6",
+    "cos-nodejs-sdk-v5": "^2.9.0",
     "cross-env": "^7.0.3",
     "eslint": "^7.18.0",
-    "eslint-config-prettier": "^7.1.0",
+    "eslint-config-prettier": "^7.2.0",
     "eslint-plugin-nuxt": "^2.0.0",
     "eslint-plugin-prettier": "^3.3.1",
     "fibers": "^5.0.0",
     "klaw": "^3.0.0",
     "less": "^4.0.0",
-    "less-loader": "^7.2.1",
+    "less-loader": "^7.3.0",
     "prettier": "^2.2.1",
-    "rollup": "^2.36.2",
-    "sass": "^1.32.2",
+    "rollup": "^2.38.0",
+    "sass": "^1.32.5",
     "sass-loader": "^10.1.0",
     "serverless-config-generator": "^1.0.4",
     "serverless-layer-deployer": "^0.2.2",
-    "stylelint": "^13.8.0",
+    "stylelint": "^13.9.0",
     "stylelint-config-prettier": "^8.0.2",
     "stylelint-config-recommended-scss": "^4.2.0",
     "stylelint-config-standard": "^20.0.0",
     "stylelint-scss": "^3.18.0",
-    "tailwind-config-viewer": "^1.4.0"
+    "tailwind-config-viewer": "^1.5.0"
   }
 }
