feat: add author wechat

--- a/packages/@som/blog/package.json
+++ b/packages/@som/blog/package.json
@@ -54,6 +54,7 @@
     "axios": "^0.21.0",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
+    "copy-text-to-clipboard": "^3.0.0",
     "core-js": "^3.8.3",
     "cos-js-sdk-v5": "^1.1.10",
     "dayjs": "^1.10.4",
@@ -70,6 +71,7 @@
     "graphql": "14.7.0",
     "graphql-tag": "^2.11.0",
     "gsap": "^3.5.1",
+    "is-mobile": "^2.2.2",
     "js-cookie": "^2.2.1",
     "lodash": "^4.17.20",
     "marked": "^1.2.7",
