chore: update pkg deps

--- a/packages/@som/blog/package.json
+++ b/packages/@som/blog/package.json
@@ -21,7 +21,7 @@
     "start:sls": "cross-env SLS_ENV=release nuxt start",
     "start": "cross-env SLS_ENV=release NODE_ENV=production node --inspect=9229 dist/listener.js",
     "build:server": "cross-env NODE_ENV=production rollup -c",
-    "deploy": "npm run gen && npm run build:server && npm run build:sls && npm run deploy:cdn && serverless deploy",
+    "deploy": "npm run gen && npm run build:server && npm run build:sls && npm run deploy:cdn && serverless deploy --no-color",
     "deploy:layer": "node ./scripts/deployLayer.js",
     "deploy:cdn": "cross-env SLS_ENV=release node ./scripts/cdn.js",
     "deploy:static": "cross-env SLS_ENV=release node ./scripts/cloudbase.js",
@@ -41,16 +41,16 @@
     "@fortawesome/free-regular-svg-icons": "^5.15.2",
     "@fortawesome/free-solid-svg-icons": "^5.15.2",
     "@fortawesome/vue-fontawesome": "^2.0.2",
-    "@nuxt/content": "^1.12.0",
+    "@nuxt/content": "^1.13.1",
     "@nuxtjs/apollo": "4.0.1-rc.4",
-    "@nuxtjs/sentry": "^5.0.0",
+    "@nuxtjs/sentry": "^5.0.1",
     "@nuxtjs/sitemap": "^2.4.0",
     "@nuxtjs/tailwindcss": "^3.4.1",
     "@sentry/node": "^6.1.0",
     "@sentry/tracing": "^6.1.0",
     "@sentry/vue": "^6.1.0",
     "@tailwindcss/typography": "^0.4.0",
-    "apollo-server-express": "^2.19.2",
+    "apollo-server-express": "^2.20.0",
     "axios": "^0.21.0",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
@@ -82,7 +82,7 @@
     "passport-github2": "^0.1.12",
     "qrcode.vue": "^1.7.0",
     "session-file-store": "^1.5.0",
-    "sitemap": "^6.3.3",
+    "sitemap": "^6.3.6",
     "socket.io-client": "^3.1.1",
     "svg4everybody": "^2.1.9",
     "tailwindcss-dark-mode": "^1.1.7",
@@ -123,15 +123,15 @@
     "less-loader": "^7.0.0",
     "prettier": "^2.2.1",
     "rollup": "^2.38.5",
-    "sass": "^1.32.6",
+    "sass": "^1.32.7",
     "sass-loader": "^10.0.0",
     "serverless-config-generator": "^1.0.4",
     "serverless-layer-deployer": "^0.2.2",
-    "stylelint": "^13.9.0",
+    "stylelint": "^13.10.0",
     "stylelint-config-prettier": "^8.0.2",
     "stylelint-config-recommended-scss": "^4.2.0",
     "stylelint-config-standard": "^20.0.0",
-    "stylelint-scss": "^3.18.0",
+    "stylelint-scss": "^3.19.0",
     "tailwind-config-viewer": "^1.5.0"
   }
 }
