--- a/packages/@som/blog/package.json
+++ b/packages/@som/blog/package.json
@@ -121,6 +121,7 @@
     "klaw": "^3.0.0",
     "less": "^4.1.1",
     "less-loader": "^7.0.0",
+    "nanoid": "^3.1.21",
     "prettier": "^2.2.1",
     "rollup": "^2.40.0",
     "sass": "^1.32.8",
