--- a/packages/@som/blog/package.json
+++ b/packages/@som/blog/package.json
@@ -118,6 +118,7 @@
     "eslint-plugin-nuxt": "^2.0.0",
     "eslint-plugin-prettier": "^3.3.1",
     "fibers": "^5.0.0",
+    "jsonfile": "^6.1.0",
     "klaw": "^3.0.0",
     "less": "^4.1.1",
     "less-loader": "^7.0.0",
