chore: components replace serverless

--- a/packages/@som/blog/package.json
+++ b/packages/@som/blog/package.json
@@ -6,7 +6,7 @@
     "dev": "npm run rollup:listener && npm run start:listener",
     "dev:raw": "cross-env DEBUG=nuxt:* nuxt dev",
     "dev:brk": "cross-env NODE_ENV=development SLS_ENV=dev DEBUG=nuxt:* node --inspect-brk=9229 server/listener.js",
-    "dev:sls": "serverless dev",
+    "dev:sls": "components dev",
     "sync": "node ./scripts/syncArticles.js",
     "analyze": "cross-env SLS_ENV=release nuxt build --analyze",
     "generate": "cross-env target=static nuxt generate",
@@ -21,7 +21,7 @@
     "start:sls": "cross-env SLS_ENV=release nuxt start",
     "start": "cross-env SLS_ENV=release NODE_ENV=production node --inspect=9229 dist/listener.js",
     "build:server": "cross-env NODE_ENV=production rollup -c",
-    "deploy": "npm run gen && npm run build:server && npm run build:sls && npm run deploy:cdn && serverless deploy --no-color",
+    "deploy": "npm run gen && npm run build:server && npm run build:sls && npm run deploy:cdn && components deploy --no-color",
     "deploy:layer": "node ./scripts/deployLayer.js",
     "deploy:cdn": "cross-env SLS_ENV=release node ./scripts/cdn.js",
     "deploy:static": "cross-env SLS_ENV=release node ./scripts/cloudbase.js",
