feat: new workspace

--- a/packages/@som/blog/package.json
+++ b/packages/@som/blog/package.json
@@ -25,7 +25,8 @@
     "deploy:layer": "node ./scripts/deployLayer.js",
     "deploy:cdn": "cross-env SLS_ENV=release node ./scripts/cdn.js",
     "deploy:static": "cross-env SLS_ENV=release node ./scripts/cloudbase.js",
-    "check:upgrade": "yarn upgradeInteractive --latest"
+    "check:upgrade": "yarn upgradeInteractive --latest",
+    "sls:info": "components info"
   },
   "commentDependencies": {
     "for-yarn-upgrade": true,
