--- a/packages/@som/blog/package.json
+++ b/packages/@som/blog/package.json
@@ -35,9 +35,9 @@
     "@som/data-model": "^1.0.0"
   },
   "dependencies": {
-    "@babel/runtime": "^7.13.10",
+    "@babel/runtime": "^7.14.0",
     "@cloudbase/js-sdk": "^1.5.0",
-    "@cloudbase/node-sdk": "^2.5.1",
+    "@cloudbase/node-sdk": "^2.5.2",
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
     "@fortawesome/free-brands-svg-icons": "^5.15.3",
     "@fortawesome/free-regular-svg-icons": "^5.15.3",
@@ -45,23 +45,23 @@
     "@fortawesome/vue-fontawesome": "^2.0.2",
     "@nuxt/content": "^1.14.0",
     "@nuxtjs/sitemap": "^2.4.0",
-    "@nuxtjs/tailwindcss": "^4.0.3",
+    "@nuxtjs/tailwindcss": "4.0.3",
     "@tailwindcss/typography": "^0.4.0",
-    "apollo-server-express": "^2.23.0",
+    "apollo-server-express": "^2.24.1",
     "axios": "^0.21.0",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
     "copy-text-to-clipboard": "^3.0.1",
-    "core-js": "^3.10.1",
-    "cos-js-sdk-v5": "^1.2.9",
+    "core-js": "^3.12.1",
+    "cos-js-sdk-v5": "^1.2.10",
     "dayjs": "^1.10.4",
-    "dompurify": "^2.2.7",
-    "dotenv": "^8.2.0",
+    "dompurify": "^2.2.8",
+    "dotenv": "^9.0.2",
     "dplayer": "^1.26.0",
     "element-ui": "^2.15.1",
     "etag": "^1.8.1",
     "express": "^4.17.1",
-    "fs-extra": "^9.1.0",
+    "fs-extra": "^10.0.0",
     "gemoji": "^7.0.0",
     "github-markdown-css": "^4.0.0",
     "gsap": "^3.6.1",
@@ -69,29 +69,29 @@
     "js-cookie": "^2.2.1",
     "lodash": "^4.17.21",
     "marked": "^2.0.3",
-    "nuxt": "^2.15.4",
+    "nuxt": "^2.15.6",
     "qrcode.vue": "^1.7.0",
     "sitemap": "^6.4.0",
     "svg4everybody": "^2.1.9",
     "tailwindcss-dark-mode": "^1.1.7",
     "uuid": "^8.3.2",
-    "vant": "^2.12.13",
+    "vant": "^2.12.19",
     "vue-aplayer": "^1.6.1",
     "vue-baidu-map": "^0.21.22"
   },
   "devDependencies": {
     "@apimediaru/postcss-px-to-viewport": "^1.2.4",
-    "@babel/core": "^7.13.15",
-    "@babel/plugin-transform-runtime": "^7.13.15",
-    "@babel/preset-env": "^7.13.15",
-    "@cloudbase/manager-node": "^3.8.3",
-    "@nuxt/types": "^2.15.4",
+    "@babel/core": "^7.14.3",
+    "@babel/plugin-transform-runtime": "^7.14.3",
+    "@babel/preset-env": "^7.14.2",
+    "@cloudbase/manager-node": "^3.9.1",
+    "@nuxt/types": "^2.15.6",
     "@nuxtjs/eslint-config": "^6.0.0",
     "@nuxtjs/google-analytics": "^2.4.0",
     "@rollup/plugin-alias": "^3.1.2",
-    "@rollup/plugin-commonjs": "^18.0.0",
+    "@rollup/plugin-commonjs": "^19.0.0",
     "@rollup/plugin-json": "^4.1.0",
-    "@rollup/plugin-node-resolve": "^11.2.1",
+    "@rollup/plugin-node-resolve": "^13.0.0",
     "@rollup/plugin-replace": "^2.4.2",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.2",
@@ -99,10 +99,10 @@
     "babel-plugin-import": "^1.13.3",
     "builtin-modules": "^3.1.0",
     "cli-progress": "^3.9.0",
-    "cos-nodejs-sdk-v5": "^2.9.13",
+    "cos-nodejs-sdk-v5": "^2.9.15",
     "cross-env": "^7.0.3",
-    "eslint": "^7.24.0",
-    "eslint-config-prettier": "^8.2.0",
+    "eslint": "^7.26.0",
+    "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-nuxt": "^2.0.0",
     "eslint-plugin-prettier": "^3.4.0",
     "fibers": "^5.0.0",
@@ -110,17 +110,17 @@
     "klaw": "^3.0.0",
     "less": "^4.1.1",
     "less-loader": "^7.0.0",
-    "nanoid": "^3.1.22",
-    "prettier": "^2.2.1",
-    "rollup": "^2.40.0",
-    "sass": "^1.32.8",
+    "nanoid": "^3.1.23",
+    "prettier": "^2.3.0",
+    "rollup": "^2.48.0",
+    "sass": "^1.32.13",
     "sass-loader": "^10.0.0",
     "serverless-config-generator": "^1.0.4",
     "serverless-layer-deployer": "^0.2.2",
-    "stylelint": "^13.11.0",
+    "stylelint": "^13.13.1",
     "stylelint-config-prettier": "^8.0.2",
     "stylelint-config-recommended-scss": "^4.2.0",
-    "stylelint-config-standard": "^20.0.0",
+    "stylelint-config-standard": "^22.0.0",
     "stylelint-scss": "^3.19.0",
     "tailwind-config-viewer": "^1.5.1"
   }
