--- a/packages/@som/blog/package.json
+++ b/packages/@som/blog/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@som/blog",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "license": "MIT",
   "scripts": {
     "dev": "npm run rollup:listener && npm run start:listener",
@@ -88,6 +88,7 @@
     "@nuxt/types": "^2.15.6",
     "@nuxtjs/eslint-config": "^6.0.0",
     "@nuxtjs/google-analytics": "^2.4.0",
+    "@nuxtjs/pwa": "^3.3.5",
     "@rollup/plugin-alias": "^3.1.2",
     "@rollup/plugin-commonjs": "^19.0.0",
     "@rollup/plugin-json": "^4.1.0",
