feat: test api gw app auth

--- a/packages/@som/blog/package.json
+++ b/packages/@som/blog/package.json
@@ -54,6 +54,7 @@
     "copy-text-to-clipboard": "^3.0.1",
     "core-js": "^3.12.1",
     "cos-js-sdk-v5": "^1.2.10",
+    "crypto-browserify": "^3.12.0",
     "dayjs": "^1.10.4",
     "dompurify": "^2.2.8",
     "dotenv": "^9.0.2",
@@ -66,11 +67,13 @@
     "github-markdown-css": "^4.0.0",
     "gsap": "^3.6.1",
     "is-mobile": "^3.0.0",
+    "js-base64": "^3.6.0",
     "js-cookie": "^2.2.1",
     "lodash": "^4.17.21",
     "marked": "^2.0.3",
     "nuxt": "^2.15.6",
     "qrcode.vue": "^1.7.0",
+    "query-string": "^7.0.0",
     "sitemap": "^6.4.0",
     "svg4everybody": "^2.1.9",
     "tailwindcss-dark-mode": "^1.1.7",
