feat: sass quiet

--- a/packages/@som/blog/package.json
+++ b/packages/@som/blog/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@som/blog",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "license": "MIT",
   "scripts": {
     "dev": "npm run rollup:listener && npm run start:listener",
@@ -46,18 +46,18 @@
     "@nuxt/content": "^1.14.0",
     "@nuxtjs/sitemap": "^2.4.0",
     "@nuxtjs/tailwindcss": "4.0.3",
-    "@tailwindcss/typography": "^0.4.0",
-    "apollo-server-express": "^2.24.1",
+    "@tailwindcss/typography": "^0.4.1",
+    "apollo-server-express": "^2.25.0",
     "axios": "^0.21.0",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
     "copy-text-to-clipboard": "^3.0.1",
-    "core-js": "^3.12.1",
+    "core-js": "^3.13.0",
     "cos-js-sdk-v5": "^1.2.10",
     "crypto-browserify": "^3.12.0",
-    "dayjs": "^1.10.4",
+    "dayjs": "^1.10.5",
     "dompurify": "^2.2.8",
-    "dotenv": "^9.0.2",
+    "dotenv": "^10.0.0",
     "dplayer": "^1.26.0",
     "element-ui": "^2.15.1",
     "etag": "^1.8.1",
@@ -67,18 +67,18 @@
     "github-markdown-css": "^4.0.0",
     "gsap": "^3.6.1",
     "is-mobile": "^3.0.0",
-    "js-base64": "^3.6.0",
+    "js-base64": "^3.6.1",
     "js-cookie": "^2.2.1",
     "lodash": "^4.17.21",
     "marked": "^2.0.3",
     "nuxt": "^2.15.6",
     "qrcode.vue": "^1.7.0",
     "query-string": "^7.0.0",
-    "sitemap": "^6.4.0",
+    "sitemap": "^7.0.0",
     "svg4everybody": "^2.1.9",
     "tailwindcss-dark-mode": "^1.1.7",
     "uuid": "^8.3.2",
-    "vant": "^2.12.19",
+    "vant": "^2.12.20",
     "vue-aplayer": "^1.6.1",
     "vue-baidu-map": "^0.21.22"
   },
@@ -89,7 +89,7 @@
     "@babel/preset-env": "^7.14.2",
     "@cloudbase/manager-node": "^3.9.1",
     "@nuxt/types": "^2.15.6",
-    "@nuxtjs/eslint-config": "^6.0.0",
+    "@nuxtjs/eslint-config": "^6.0.1",
     "@nuxtjs/google-analytics": "^2.4.0",
     "@nuxtjs/pwa": "^3.3.5",
     "@rollup/plugin-alias": "^3.1.2",
@@ -116,8 +116,8 @@
     "less-loader": "^7.0.0",
     "nanoid": "^3.1.23",
     "prettier": "^2.3.0",
-    "rollup": "^2.48.0",
-    "sass": "^1.32.13",
+    "rollup": "^2.50.2",
+    "sass": "1.32.12",
     "sass-loader": "^10.0.0",
     "serverless-config-generator": "^1.0.4",
     "serverless-layer-deployer": "^0.2.2",
