--- a/packages/@som/blog/package.json
+++ b/packages/@som/blog/package.json
@@ -35,7 +35,7 @@
     "@som/data-model": "^1.0.0"
   },
   "dependencies": {
-    "@babel/runtime": "^7.14.0",
+    "@babel/runtime": "^7.14.6",
     "@cloudbase/js-sdk": "^1.5.0",
     "@cloudbase/node-sdk": "^2.5.2",
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
@@ -45,15 +45,15 @@
     "@fortawesome/vue-fontawesome": "^2.0.2",
     "@nuxt/content": "^1.14.0",
     "@nuxtjs/sitemap": "^2.4.0",
-    "@nuxtjs/tailwindcss": "4.0.3",
+    "@nuxtjs/tailwindcss": "4.1.3",
     "@tailwindcss/typography": "^0.4.1",
-    "apollo-server-express": "^2.25.0",
+    "apollo-server-express": "^2.25.1",
     "axios": "^0.21.0",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
     "copy-text-to-clipboard": "^3.0.1",
-    "core-js": "^3.13.1",
-    "cos-js-sdk-v5": "^1.2.11",
+    "core-js": "^3.14.0",
+    "cos-js-sdk-v5": "^1.2.13",
     "crypto-browserify": "^3.12.0",
     "dayjs": "^1.10.5",
     "dompurify": "^2.2.9",
@@ -65,30 +65,30 @@
     "fs-extra": "^10.0.0",
     "gemoji": "^7.0.0",
     "github-markdown-css": "^4.0.0",
-    "gsap": "^3.6.1",
+    "gsap": "^3.7.0",
     "is-mobile": "^3.0.0",
     "js-base64": "^3.6.1",
     "js-cookie": "^2.2.1",
     "lodash": "^4.17.21",
-    "marked": "^2.0.7",
-    "nuxt": "^2.15.6",
+    "marked": "^2.1.1",
+    "nuxt": "^2.15.7",
     "qrcode.vue": "^1.7.0",
     "query-string": "^7.0.0",
     "sitemap": "^7.0.0",
     "svg4everybody": "^2.1.9",
     "tailwindcss-dark-mode": "^1.1.7",
     "uuid": "^8.3.2",
-    "vant": "^2.12.20",
+    "vant": "^2.12.21",
     "vue-aplayer": "^1.6.1",
     "vue-baidu-map": "^0.21.22"
   },
   "devDependencies": {
     "@apimediaru/postcss-px-to-viewport": "^1.2.4",
-    "@babel/core": "^7.14.3",
-    "@babel/plugin-transform-runtime": "^7.14.3",
-    "@babel/preset-env": "^7.14.4",
-    "@cloudbase/manager-node": "^3.9.1",
-    "@nuxt/types": "^2.15.6",
+    "@babel/core": "^7.14.6",
+    "@babel/plugin-transform-runtime": "^7.14.5",
+    "@babel/preset-env": "^7.14.5",
+    "@cloudbase/manager-node": "^3.9.2",
+    "@nuxt/types": "^2.15.7",
     "@nuxtjs/eslint-config": "^6.0.1",
     "@nuxtjs/google-analytics": "^2.4.0",
     "@nuxtjs/pwa": "^3.3.5",
@@ -103,20 +103,21 @@
     "babel-plugin-import": "^1.13.3",
     "builtin-modules": "^3.1.0",
     "cli-progress": "^3.9.0",
-    "cos-nodejs-sdk-v5": "^2.9.17",
+    "cos-nodejs-sdk-v5": "^2.9.20",
     "cross-env": "^7.0.3",
-    "eslint": "^7.26.0",
+    "eslint": "^7.28.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-nuxt": "^2.0.0",
     "eslint-plugin-prettier": "^3.4.0",
     "fibers": "^5.0.0",
+    "glob": "^7.1.7",
     "jsonfile": "^6.1.0",
     "klaw": "^3.0.0",
     "less": "^4.1.1",
     "less-loader": "^7.0.0",
     "nanoid": "^3.1.23",
-    "prettier": "^2.3.0",
-    "rollup": "^2.50.5",
+    "prettier": "^2.3.1",
+    "rollup": "^2.52.1",
     "sass": "1.32.12",
     "sass-loader": "^10.0.0",
     "serverless-config-generator": "^1.0.4",
@@ -126,6 +127,6 @@
     "stylelint-config-recommended-scss": "^4.2.0",
     "stylelint-config-standard": "^22.0.0",
     "stylelint-scss": "^3.19.0",
-    "tailwind-config-viewer": "^1.5.1"
+    "tailwind-config-viewer": "^1.6.2"
   }
 }
