feat: add one debug command

--- a/packages/@som/blog/package.json
+++ b/packages/@som/blog/package.json
@@ -27,7 +27,8 @@
     "deploy:static": "cross-env SLS_ENV=release node ./scripts/cloudbase.js",
     "deploy:ssg": "npm run gen && npm run generate && components deploy",
     "check:upgrade": "yarn upgradeInteractive --latest",
-    "sls:info": "components info"
+    "sls:info": "components info",
+    "deploy:debug": "cross-env SLS_DEBUG=* components deploy"
   },
   "commentDependencies": {
     "for-yarn-upgrade": true,
