--- a/packages/@som/blog/package.json
+++ b/packages/@som/blog/package.json
@@ -25,7 +25,7 @@
     "deploy:layer": "node ./scripts/deployLayer.js",
     "deploy:cdn": "cross-env SLS_ENV=release node ./scripts/cdn.js",
     "deploy:static": "cross-env SLS_ENV=release node ./scripts/cloudbase.js",
-    "deploy:ssg": "npm run gen && npm run generate && components deploy",
+    "deploy:ssg": "npm run gen && npm run generate && components deploy && node ./scripts/refresh-cdn-urls.js",
     "check:upgrade": "yarn upgradeInteractive --latest",
     "sls:info": "components info",
     "deploy:debug": "cross-env SLS_DEBUG=* components deploy"
@@ -132,6 +132,7 @@
     "stylelint-config-recommended-scss": "^4.2.0",
     "stylelint-config-standard": "^22.0.0",
     "stylelint-scss": "^3.19.0",
-    "tailwind-config-viewer": "^1.6.2"
+    "tailwind-config-viewer": "^1.6.2",
+    "tencentcloud-sdk-nodejs": "^4.0.159"
   }
 }
