--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sonofmagic.github.io",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "private": true,
   "license": "MIT",
   "description": "a serverless nuxt website",
@@ -23,6 +23,7 @@
     "dev": "lerna run dev --scope @som/blog",
     "gen": "lerna run gen",
     "deploy": "lerna run deploy",
+    "deploy:blog":"cd packages/@som/blog && npm run deploy:ssg",
     "genChangelog": "node scripts/genChangelog.js"
   },
   "devDependencies": {
