feat: add deploy action for manual trigger

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dev": "lerna run dev --scope @som/blog",
     "gen": "lerna run gen",
     "deploy": "lerna run deploy",
+    "install:blog": "cd packages/@som/blog && yarn",
     "deploy:blog":"cd packages/@som/blog && npm run deploy:ssg",
     "genChangelog": "node scripts/genChangelog.js"
   },
