chore: upgrade deps

--- a/packages/@som/blog/package.json
+++ b/packages/@som/blog/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@som/blog",
-  "version": "1.0.3",
+  "version": "1.1.0",
   "license": "MIT",
   "scripts": {
     "dev": "npm run rollup:listener && npm run start:listener",
@@ -36,9 +36,9 @@
     "@som/data-model": "^1.0.0"
   },
   "dependencies": {
-    "@babel/runtime": "^7.14.6",
-    "@cloudbase/js-sdk": "^1.5.1",
-    "@cloudbase/node-sdk": "^2.6.0",
+    "@babel/runtime": "^7.14.8",
+    "@cloudbase/js-sdk": "^1.6.0",
+    "@cloudbase/node-sdk": "^2.6.1",
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
     "@fortawesome/free-brands-svg-icons": "^5.15.3",
     "@fortawesome/free-regular-svg-icons": "^5.15.3",
@@ -48,7 +48,7 @@
     "@nuxtjs/sitemap": "^2.4.0",
     "@nuxtjs/tailwindcss": "4.1.3",
     "@tailwindcss/typography": "^0.4.1",
-    "apollo-server-express": "^2.25.2",
+    "apollo-server-express": "^3.0.2",
     "axios": "^0.21.0",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
@@ -56,8 +56,8 @@
     "core-js": "^3.15.2",
     "cos-js-sdk-v5": "^1.2.15",
     "crypto-browserify": "^3.12.0",
-    "dayjs": "^1.10.5",
-    "dompurify": "^2.2.9",
+    "dayjs": "^1.10.6",
+    "dompurify": "^2.3.0",
     "dotenv": "^10.0.0",
     "dplayer": "^1.26.0",
     "echarts": "^5.1.2",
@@ -68,7 +68,7 @@
     "fs-extra": "^10.0.0",
     "gemoji": "^7.0.0",
     "github-markdown-css": "^4.0.0",
-    "gsap": "^3.7.0",
+    "gsap": "^3.7.1",
     "is-mobile": "^3.0.0",
     "js-base64": "^3.6.1",
     "js-cookie": "^2.2.1",
@@ -81,28 +81,28 @@
     "svg4everybody": "^2.1.9",
     "tailwindcss-dark-mode": "^1.1.7",
     "uuid": "^8.3.2",
-    "vant": "^2.12.22",
+    "vant": "^2.12.24",
     "vue-aplayer": "^1.6.1",
     "vue-baidu-map": "^0.21.22",
     "vue-echarts": "^6.0.0-rc.6"
   },
   "devDependencies": {
     "@apimediaru/postcss-px-to-viewport": "^1.2.4",
-    "@babel/core": "^7.14.6",
+    "@babel/core": "^7.14.8",
     "@babel/plugin-transform-runtime": "^7.14.5",
-    "@babel/preset-env": "^7.14.7",
+    "@babel/preset-env": "^7.14.8",
     "@cloudbase/manager-node": "^3.9.3",
     "@nuxt/types": "^2.15.7",
     "@nuxtjs/eslint-config": "^6.0.1",
     "@nuxtjs/google-analytics": "^2.4.0",
     "@nuxtjs/pwa": "^3.3.5",
-    "@rollup/plugin-alias": "^3.1.2",
-    "@rollup/plugin-commonjs": "^19.0.0",
+    "@rollup/plugin-alias": "^3.1.4",
+    "@rollup/plugin-commonjs": "^19.0.1",
     "@rollup/plugin-json": "^4.1.0",
-    "@rollup/plugin-node-resolve": "^13.0.0",
-    "@rollup/plugin-replace": "^2.4.2",
-    "@serverless/components": "^3.13.2",
-    "@vue/composition-api": "^1.0.0-rc.13",
+    "@rollup/plugin-node-resolve": "^13.0.2",
+    "@rollup/plugin-replace": "^3.0.0",
+    "@serverless/components": "^3.14.0",
+    "@vue/composition-api": "^1.0.3",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.2",
     "babel-plugin-component": "^1.1.1",
@@ -111,7 +111,7 @@
     "cli-progress": "^3.9.0",
     "cos-nodejs-sdk-v5": "^2.9.21",
     "cross-env": "^7.0.3",
-    "eslint": "^7.30.0",
+    "eslint": "^7.31.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-nuxt": "^2.0.0",
     "eslint-plugin-prettier": "^3.4.0",
@@ -123,17 +123,17 @@
     "less-loader": "^7.0.0",
     "nanoid": "^3.1.23",
     "prettier": "^2.3.2",
-    "rollup": "^2.52.7",
+    "rollup": "^2.53.3",
     "sass": "1.32.12",
     "sass-loader": "^10.0.0",
     "serverless-config-generator": "^1.0.4",
     "serverless-layer-deployer": "^0.2.2",
     "stylelint": "^13.13.1",
     "stylelint-config-prettier": "^8.0.2",
-    "stylelint-config-recommended-scss": "^4.2.0",
+    "stylelint-config-recommended-scss": "^4.3.0",
     "stylelint-config-standard": "^22.0.0",
-    "stylelint-scss": "^3.19.0",
+    "stylelint-scss": "^3.20.1",
     "tailwind-config-viewer": "^1.6.2",
-    "tencentcloud-sdk-nodejs": "^4.0.159"
+    "tencentcloud-sdk-nodejs": "^4.0.170"
   }
 }
