--- a/packages/@som/blog/package.json
+++ b/packages/@som/blog/package.json
@@ -45,6 +45,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@fortawesome/vue-fontawesome": "^2.0.2",
     "@nuxt/content": "^1.14.0",
+    "@nuxtjs/feed": "^2.0.0",
     "@nuxtjs/sitemap": "^2.4.0",
     "@nuxtjs/tailwindcss": "4.1.3",
     "@tailwindcss/typography": "^0.4.1",
@@ -117,6 +118,7 @@
     "eslint-plugin-prettier": "^3.4.0",
     "fibers": "^5.0.0",
     "glob": "^7.1.7",
+    "gray-matter": "^4.0.3",
     "jsonfile": "^6.1.0",
     "klaw": "^3.0.0",
     "less": "^4.1.1",
