--- a/packages/@som/blog/package.json
+++ b/packages/@som/blog/package.json
@@ -49,9 +49,13 @@
     "@nuxtjs/sitemap": "^2.4.0",
     "@nuxtjs/tailwindcss": "4.1.3",
     "@tailwindcss/typography": "^0.4.1",
+    "ansi-style-parser": "^3.0.0",
+    "ansi-to-html": "^0.7.1",
+    "ansicolor": "^1.1.95",
     "apollo-server-express": "^3.0.2",
     "axios": "^0.21.0",
     "body-parser": "^1.19.0",
+    "compressorjs": "^1.0.7",
     "cookie-parser": "^1.4.5",
     "copy-text-to-clipboard": "^3.0.1",
     "core-js": "^3.15.2",
