--- a/packages/@som/blog/package.json
+++ b/packages/@som/blog/package.json
@@ -47,7 +47,7 @@
     "@nuxt/content": "^1.14.0",
     "@nuxtjs/feed": "^2.0.0",
     "@nuxtjs/sitemap": "^2.4.0",
-    "@nuxtjs/tailwindcss": "4.1.3",
+    "@nuxtjs/tailwindcss": "^4.2.1",
     "@tailwindcss/typography": "^0.4.1",
     "ansi-style-parser": "^3.0.0",
     "ansi-to-html": "^0.7.1",
@@ -84,12 +84,12 @@
     "query-string": "^7.0.1",
     "sitemap": "^7.0.0",
     "svg4everybody": "^2.1.9",
-    "tailwindcss-dark-mode": "^1.1.7",
+    "tailwindcss": "^2.2.7",
     "uuid": "^8.3.2",
     "vant": "^2.12.24",
     "vue-aplayer": "^1.6.1",
     "vue-baidu-map": "^0.21.22",
-    "vue-echarts": "^6.0.0-rc.6"
+    "vue-echarts": "6.0.0-rc.6"
   },
   "devDependencies": {
     "@apimediaru/postcss-px-to-viewport": "^1.2.4",
@@ -97,12 +97,13 @@
     "@babel/plugin-transform-runtime": "^7.14.5",
     "@babel/preset-env": "^7.14.8",
     "@cloudbase/manager-node": "^3.9.3",
+    "@nuxt/postcss8": "^1.1.3",
     "@nuxt/types": "^2.15.7",
     "@nuxtjs/eslint-config": "^6.0.1",
     "@nuxtjs/google-analytics": "^2.4.0",
     "@nuxtjs/pwa": "^3.3.5",
     "@rollup/plugin-alias": "^3.1.4",
-    "@rollup/plugin-commonjs": "^19.0.1",
+    "@rollup/plugin-commonjs": "^20.0.0",
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^13.0.2",
     "@rollup/plugin-replace": "^3.0.0",
@@ -129,6 +130,7 @@
     "less": "^4.1.1",
     "less-loader": "^7.0.0",
     "nanoid": "^3.1.23",
+    "postcss": "^8.3.6",
     "prettier": "^2.3.2",
     "rollup": "^2.53.3",
     "sass": "1.32.12",
