--- a/packages/@som/blog/packages/editor/package.json
+++ b/packages/@som/blog/packages/editor/package.json
@@ -7,13 +7,24 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "@codemirror/basic-setup": "^0.19.0",
+    "@codemirror/commands": "^0.19.2",
+    "@codemirror/lang-javascript": "^0.19.1",
+    "@codemirror/state": "^0.19.1",
+    "@codemirror/text": "^0.19.2",
+    "@codemirror/view": "^0.19.3",
     "vue": "^3.2.6"
   },
   "devDependencies": {
+    "@types/tailwindcss": "^2.2.1",
     "@vitejs/plugin-vue": "^1.3.0",
     "@vue/compiler-sfc": "^3.0.5",
+    "autoprefixer": "^10.3.2",
+    "postcss": "^8.3.6",
+    "sass": "^1.38.1",
+    "tailwindcss": "^2.2.7",
     "typescript": "^4.3.2",
     "vite": "^2.4.4",
-    "vue-tsc": "^0.2.2"
+    "vue-tsc": "^0.3.0"
   }
 }
