--- a/packages/@som/blog/package.json
+++ b/packages/@som/blog/package.json
@@ -103,6 +103,7 @@
     "@rollup/plugin-node-resolve": "^13.0.2",
     "@rollup/plugin-replace": "^3.0.0",
     "@serverless/components": "^3.15.1",
+    "@types/tailwindcss": "^2.2.1",
     "@vue/composition-api": "^1.1.3",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.2",
