--- a/.github/workflows/blog-deployer.yml
+++ b/.github/workflows/blog-deployer.yml
@@ -23,7 +23,8 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: 14.x
-          cache: 'yarn'
+          cache: yarn
+          cache-dependency-path: 'packages/@som/blog/yarn.lock'
 
       - name: Install Dependencies
         run: yarn install:blog
