--- a/packages/@som/blog/package.json
+++ b/packages/@som/blog/package.json
@@ -3,37 +3,24 @@
   "version": "1.1.4",
   "license": "MIT",
   "scripts": {
-    "dev": "npm run rollup:listener && npm run start:listener",
-    "dev:raw": "cross-env DEBUG=nuxt:* nuxt dev",
-    "dev:brk": "cross-env NODE_ENV=development SLS_ENV=dev DEBUG=nuxt:* node --inspect-brk=9229 server/listener.js",
-    "dev:sls": "components dev",
+    "dev": "cross-env NODE_ENV=development SLS_ENV=dev DEBUG=nuxt:* nuxt --trace-warnings dev",
     "sync": "node scripts/syncArticles.js",
     "analyze": "cross-env SLS_ENV=release nuxt build --analyze",
     "generate": "cross-env SLS_ENV=release NODE_ENV=production nuxt generate",
     "lint:js": "eslint --ext .js,.vue --ignore-path .gitignore .",
     "lint:style": "stylelint **/*.{vue,css} --ignore-path .gitignore",
     "lint": "yarn lint:js && yarn lint:style",
-    "rollup:listener": "cross-env NODE_ENV=development rollup -c",
-    "start:listener": "cross-env NODE_ENV=development SLS_ENV=dev DEBUG=nuxt:* node --inspect=9229 dist/listener.js",
     "gen": "cross-env SLS_ENV=release NODE_ENV=production node ./scripts/genCfg.js",
-    "build:local": "cross-env SLS_ENV=test nuxt build",
     "build:sls": "cross-env SLS_ENV=release nuxt build",
     "start:sls": "cross-env SLS_ENV=release nuxt start",
     "start": "cross-env SLS_ENV=release NODE_ENV=production node --inspect=9229 dist/listener.js",
-    "build:server": "cross-env NODE_ENV=production rollup -c",
-    "deploy": "npm run gen && npm run build:server && npm run build:sls && npm run deploy:cdn && components deploy --no-color",
-    "deploy:layer": "node ./scripts/deployLayer.js",
-    "deploy:cdn": "cross-env SLS_ENV=release node ./scripts/cdn.js",
-    "deploy:static": "cross-env SLS_ENV=release node ./scripts/cloudbase.js",
     "deploy:ssg": "npm run gen && npm run generate && components deploy && node ./scripts/refresh-cdn-urls.js",
     "check:upgrade": "yarn upgradeInteractive --latest",
-    "sls:info": "components info",
-    "deploy:debug": "cross-env SLS_DEBUG=* components deploy"
+    "sls:info": "components info"
   },
   "dependencies": {
     "@babel/runtime": "^7.15.3",
     "@cloudbase/js-sdk": "^1.7.1",
-    "@cloudbase/node-sdk": "^2.7.1",
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-brands-svg-icons": "^5.15.4",
     "@fortawesome/free-regular-svg-icons": "^5.15.4",
@@ -44,28 +31,16 @@
     "@nuxtjs/sitemap": "^2.4.0",
     "@nuxtjs/tailwindcss": "^4.2.1",
     "@tailwindcss/typography": "^0.4.1",
-    "ansi-style-parser": "^3.0.0",
-    "ansi-to-html": "^0.7.1",
     "ansicolor": "^1.1.95",
-    "apollo-server-express": "^3.0.2",
     "axios": "^0.21.0",
-    "body-parser": "^1.19.0",
-    "compressorjs": "^1.0.7",
-    "cookie-parser": "^1.4.5",
     "copy-text-to-clipboard": "^3.0.1",
     "core-js": "^3.16.2",
-    "cos-js-sdk-v5": "^1.2.15",
-    "crypto-browserify": "^3.12.0",
     "dayjs": "^1.10.6",
     "dompurify": "^2.3.1",
-    "dotenv": "^10.0.0",
     "dplayer": "^1.26.0",
     "echarts": "^5.1.2",
     "element-ui": "^2.15.3",
     "eruda": "^2.4.1",
-    "etag": "^1.8.1",
-    "express": "^4.17.1",
-    "fs-extra": "^10.0.0",
     "gemoji": "^7.0.0",
     "github-markdown-css": "^4.0.0",
     "gsap": "^3.7.1",
@@ -76,32 +51,22 @@
     "marked": "^2.1.3",
     "nuxt": "^2.15.8",
     "qrcode.vue": "^1.7.0",
-    "query-string": "^7.0.1",
     "sitemap": "^7.0.0",
     "svg4everybody": "^2.1.9",
-    "tailwindcss": "^2.2.7",
     "uuid": "^8.3.2",
     "vant": "^2.12.26",
     "vue-aplayer": "^1.6.1",
-    "vue-baidu-map": "^0.21.22",
     "vue-echarts": "6.0.0-rc.6"
   },
   "devDependencies": {
-    "@apimediaru/postcss-px-to-viewport": "^1.2.4",
+    "dotenv": "^10.0.0",
     "@babel/core": "^7.15.0",
     "@babel/plugin-transform-runtime": "^7.15.0",
     "@babel/preset-env": "^7.15.0",
-    "@cloudbase/manager-node": "^3.9.3",
     "@nuxt/postcss8": "^1.1.3",
     "@nuxt/types": "^2.15.8",
     "@nuxtjs/eslint-config": "^6.0.1",
     "@nuxtjs/google-analytics": "^2.4.0",
-    "@nuxtjs/pwa": "^3.3.5",
-    "@rollup/plugin-alias": "^3.1.4",
-    "@rollup/plugin-commonjs": "^20.0.0",
-    "@rollup/plugin-json": "^4.1.0",
-    "@rollup/plugin-node-resolve": "^13.0.2",
-    "@rollup/plugin-replace": "^3.0.0",
     "@serverless/components": "^3.15.1",
     "@types/tailwindcss": "^2.2.1",
     "@vue/composition-api": "^1.1.3",
@@ -109,7 +74,6 @@
     "babel-loader": "^8.2.2",
     "babel-plugin-component": "^1.1.1",
     "babel-plugin-import": "^1.13.3",
-    "builtin-modules": "^3.1.0",
     "cli-progress": "^3.9.0",
     "cos-nodejs-sdk-v5": "^2.10.0",
     "cross-env": "^7.0.3",
@@ -119,16 +83,12 @@
     "eslint-plugin-prettier": "^3.4.1",
     "fibers": "^5.0.0",
     "glob": "^7.1.7",
-    "graceful-fs": "^4.2.8",
     "gray-matter": "^4.0.3",
-    "jsonfile": "^6.1.0",
     "klaw": "^3.0.0",
     "less": "^4.1.1",
     "less-loader": "^7.0.0",
-    "nanoid": "^3.1.25",
     "postcss": "^8.3.6",
     "prettier": "^2.3.2",
-    "rollup": "^2.56.3",
     "sass": "1.32.12",
     "sass-loader": "^10.0.0",
     "serverless-config-generator": "^1.0.4",
