--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "gen": "lerna run gen",
     "deploy": "lerna run deploy",
     "install:blog": "cd packages/@som/blog && yarn",
-    "deploy:blog":"cd packages/@som/blog && npm run deploy:ssg",
+    "deploy:blog":"cd packages/@som/blog && npm run deploy",
     "sync:article":"cd packages/@som/blog && npm run sync",
     "genChangelog": "node scripts/genChangelog.js"
   },
