--- a/.github/workflows/blog-deployer.yml
+++ b/.github/workflows/blog-deployer.yml
@@ -16,16 +16,17 @@ jobs:
         uses: szenius/set-timezone@v1.0
         with:
           timezoneLinux: Asia/Shanghai
-      - name: Get submoudle private repo
-        uses: actions/checkout@v2
-        with:
-          repository: sonofmagic/icebreaker-articles
-          ref: main
-          token: ${{ secrets.PERSONAL_TOKEN }}
+      # - name: Get submoudle private repo
+      #   uses: actions/checkout@v2
+      #   with:
+      #     repository: sonofmagic/icebreaker-articles
+      #     ref: main
+      #     token: ${{ secrets.PERSONAL_TOKEN }}
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - name: checkout self repo with cd command
+      - name: checkout self repo # with cd command
         uses: actions/checkout@v2
-      
+          with:
+            submodules: 'true'
       - name: Setup Node.js environment
         uses: actions/setup-node@v2
         with:
