--- a/.github/workflows/blog-deployer.yml
+++ b/.github/workflows/blog-deployer.yml
@@ -27,6 +27,7 @@ jobs:
         uses: actions/checkout@v2
         with:
           submodules: 'true'
+          token: ${{ secrets.PERSONAL_TOKEN }}
       - name: Setup Node.js environment
         uses: actions/setup-node@v2
         with:
