--- a/packages/@som/blog/package.json
+++ b/packages/@som/blog/package.json
@@ -26,6 +26,7 @@
     "@fortawesome/vue-fontawesome": "^2.0.2",
     "@nuxt/content": "^1.14.0",
     "@nuxtjs/feed": "^2.0.0",
+    "@nuxtjs/proxy": "^2.1.0",
     "@nuxtjs/sitemap": "^2.4.0",
     "@nuxtjs/tailwindcss": "^4.2.1",
     "@tailwindcss/typography": "^0.4.1",
@@ -57,7 +58,6 @@
     "vue-echarts": "6.0.0-rc.6"
   },
   "devDependencies": {
-    "dotenv": "^10.0.0",
     "@babel/core": "^7.15.0",
     "@babel/plugin-transform-runtime": "^7.15.0",
     "@babel/preset-env": "^7.15.0",
@@ -75,6 +75,7 @@
     "cli-progress": "^3.9.0",
     "cos-nodejs-sdk-v5": "^2.10.0",
     "cross-env": "^7.0.3",
+    "dotenv": "^10.0.0",
     "eslint": "^7.31.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-nuxt": "^2.0.0",
