--- a/packages/@som/blog/package.json
+++ b/packages/@som/blog/package.json
@@ -51,6 +51,7 @@
     "nuxt": "^2.15.8",
     "qrcode.vue": "^1.7.0",
     "sitemap": "^7.0.0",
+    "socket.io-client": "^4.2.0",
     "svg4everybody": "^2.1.9",
     "uuid": "^8.3.2",
     "vant": "^2.12.26",
