--- a/packages/@som/blog/package.json
+++ b/packages/@som/blog/package.json
@@ -43,6 +43,7 @@
     "gemoji": "^7.0.0",
     "github-markdown-css": "^4.0.0",
     "gsap": "^3.7.1",
+    "infinite-scroll": "^4.0.1",
     "is-mobile": "^3.0.0",
     "js-base64": "^3.6.1",
     "js-cookie": "^2.2.1",
@@ -53,10 +54,12 @@
     "sitemap": "^7.0.0",
     "socket.io-client": "^4.2.0",
     "svg4everybody": "^2.1.9",
+    "swiper": "6.8.4",
     "uuid": "^8.3.2",
     "vant": "^2.12.26",
     "vue-aplayer": "^1.6.1",
-    "vue-echarts": "6.0.0-rc.6"
+    "vue-echarts": "6.0.0-rc.6",
+    "vuex-persistedstate": "^4.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.15.0",
