--- a/packages/@som/blog/package.json
+++ b/packages/@som/blog/package.json
@@ -17,91 +17,92 @@
     "sls:info": "components info"
   },
   "dependencies": {
-    "@babel/runtime": "^7.15.3",
+    "@babel/runtime": "^7.16.3",
     "@cloudbase/js-sdk": "^1.7.1",
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-brands-svg-icons": "^5.15.4",
     "@fortawesome/free-regular-svg-icons": "^5.15.4",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
-    "@fortawesome/vue-fontawesome": "^2.0.2",
-    "@nuxt/content": "^1.14.0",
+    "@fortawesome/vue-fontawesome": "^2.0.6",
+    "@nuxt/content": "^1.15.1",
     "@nuxtjs/feed": "^2.0.0",
     "@nuxtjs/proxy": "^2.1.0",
     "@nuxtjs/sitemap": "^2.4.0",
     "@nuxtjs/tailwindcss": "^4.2.1",
     "@tailwindcss/typography": "^0.4.1",
     "ansicolor": "^1.1.95",
-    "axios": "^0.21.0",
+    "axios": "^0.24.0",
     "copy-text-to-clipboard": "^3.0.1",
-    "core-js": "^3.16.2",
-    "dayjs": "^1.10.6",
-    "dompurify": "^2.3.1",
+    "core-js": "^3.19.1",
+    "dayjs": "^1.10.7",
+    "dompurify": "^2.3.3",
     "dplayer": "^1.26.0",
-    "echarts": "^5.1.2",
+    "echarts": "^5.2.2",
     "element-ui": "^2.15.3",
     "eruda": "^2.4.1",
-    "gemoji": "^7.0.0",
-    "github-markdown-css": "^4.0.0",
-    "gsap": "^3.7.1",
+    "gemoji": "^7.1.0",
+    "github-markdown-css": "^5.0.0",
+    "gsap": "^3.8.0",
     "infinite-scroll": "^4.0.1",
     "is-mobile": "^3.0.0",
-    "js-base64": "^3.6.1",
-    "js-cookie": "^2.2.1",
+    "js-base64": "^3.7.2",
+    "js-cookie": "^3.0.1",
     "lodash": "^4.17.21",
-    "marked": "^2.1.3",
+    "marked": "^4.0.4",
     "nuxt": "^2.15.8",
     "qrcode.vue": "^1.7.0",
     "sitemap": "^7.0.0",
-    "socket.io-client": "^4.2.0",
+    "socket.io-client": "^4.4.0",
     "svg4everybody": "^2.1.9",
     "swiper": "6.8.4",
     "uuid": "^8.3.2",
-    "vant": "^2.12.26",
+    "vant": "^2.12.34",
     "vue-aplayer": "^1.6.1",
-    "vue-echarts": "6.0.0-rc.6",
+    "vue-echarts": "6.0.0",
     "vuex-persistedstate": "^4.1.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.15.0",
-    "@babel/plugin-transform-runtime": "^7.15.0",
-    "@babel/preset-env": "^7.15.0",
+    "@babel/core": "^7.16.0",
+    "@babel/plugin-transform-runtime": "^7.16.4",
+    "@babel/preset-env": "^7.16.4",
     "@nuxt/postcss8": "^1.1.3",
     "@nuxt/types": "^2.15.8",
-    "@nuxtjs/eslint-config": "^6.0.1",
+    "@nuxtjs/eslint-config": "^7.0.0",
     "@nuxtjs/google-analytics": "^2.4.0",
-    "@serverless/components": "^3.15.1",
-    "@types/tailwindcss": "^2.2.1",
-    "@vue/composition-api": "^1.1.3",
+    "@serverless/components": "^3.18.1",
+    "@types/tailwindcss": "^2.2.4",
+    "@vue/composition-api": "^1.4.0",
     "babel-eslint": "^10.1.0",
-    "babel-loader": "^8.2.2",
+    "babel-loader": "^8.2.3",
     "babel-plugin-component": "^1.1.1",
     "babel-plugin-import": "^1.13.3",
-    "cli-progress": "^3.9.0",
-    "cos-nodejs-sdk-v5": "^2.10.0",
+    "cli-progress": "^3.9.1",
+    "cos-nodejs-sdk-v5": "^2.11.2",
     "cross-env": "^7.0.3",
     "dotenv": "^10.0.0",
-    "eslint": "^7.31.0",
+    "eslint": "^8.3.0",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-nuxt": "^2.0.0",
-    "eslint-plugin-prettier": "^3.4.1",
+    "eslint-plugin-nuxt": "^3.0.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "fibers": "^5.0.0",
-    "glob": "^7.1.7",
+    "glob": "^7.2.0",
     "gray-matter": "^4.0.3",
-    "klaw": "^3.0.0",
-    "less": "^4.1.1",
+    "klaw": "^4.0.1",
+    "less": "^4.1.2",
     "less-loader": "^7.0.0",
-    "postcss": "^8.3.6",
-    "prettier": "^2.3.2",
+    "postcss": "^8.4.1",
+    "prettier": "^2.4.1",
     "sass": "1.32.12",
     "sass-loader": "^10.0.0",
     "serverless-config-generator": "^1.0.4",
-    "serverless-layer-deployer": "^0.2.2",
-    "stylelint": "^13.13.1",
-    "stylelint-config-prettier": "^8.0.2",
-    "stylelint-config-recommended-scss": "^4.3.0",
-    "stylelint-config-standard": "^22.0.0",
-    "stylelint-scss": "^3.20.1",
+    "serverless-layer-deployer": "^0.3.0",
+    "stylelint": "^14.1.0",
+    "stylelint-config-prettier": "^9.0.3",
+    "stylelint-config-recommended-scss": "^5.0.2",
+    "stylelint-config-standard": "^24.0.0",
+    "stylelint-scss": "^4.0.0",
     "tailwind-config-viewer": "^1.6.2",
-    "tencentcloud-sdk-nodejs": "^4.0.187"
+    "tailwindcss": "^2.2.19",
+    "tencentcloud-sdk-nodejs": "^4.0.244"
   }
 }
