--- a/packages/@som/blog/package.json
+++ b/packages/@som/blog/package.json
@@ -87,6 +87,7 @@
     "less-loader": "^7.0.0",
     "postcss": "^8.4.4",
     "prettier": "^2.5.0",
+    "reading-time": "^1.5.0",
     "sass": "1.32.12",
     "sass-loader": "^10.0.0",
     "serverless-config-generator": "^1.0.4",
