feat: commit qrcode batch download

--- a/packages/@som/blog/package.json
+++ b/packages/@som/blog/package.json
@@ -30,6 +30,7 @@
     "@nuxtjs/sitemap": "^2.4.0",
     "@nuxtjs/tailwindcss": "^4.2.1",
     "@tailwindcss/typography": "^0.4.1",
+    "@types/qrcode": "^1.4.1",
     "ansicolor": "^1.1.95",
     "axios": "^0.24.0",
     "copy-text-to-clipboard": "^3.0.1",
@@ -40,15 +41,18 @@
     "echarts": "^5.2.2",
     "element-ui": "^2.15.3",
     "eruda": "^2.4.1",
+    "file-saver": "^2.0.5",
     "gemoji": "^7.1.0",
     "github-markdown-css": "^5.0.0",
     "gsap": "^3.8.0",
     "is-mobile": "^3.0.0",
     "js-base64": "^3.7.2",
     "js-cookie": "^3.0.1",
+    "jszip": "^3.7.1",
     "lodash": "^4.17.21",
     "marked": "^4.0.5",
     "nuxt": "^2.15.8",
+    "qrcode": "^1.5.0",
     "sitemap": "^7.0.0",
     "svg4everybody": "^2.1.9",
     "swiper": "6.8.4",
@@ -67,6 +71,7 @@
     "@nuxtjs/eslint-config": "^8.0.0",
     "@nuxtjs/google-analytics": "^2.4.0",
     "@serverless/components": "^3.18.1",
+    "@types/file-saver": "^2.0.4",
     "@types/tailwindcss": "^2.2.4",
     "@vue/composition-api": "^1.4.0",
     "babel-eslint": "^10.1.0",
