--- a/packages/@som/blog/package.json
+++ b/packages/@som/blog/package.json
@@ -68,6 +68,7 @@
     "@babel/preset-env": "^7.16.4",
     "@nuxt/postcss8": "^1.1.3",
     "@nuxt/types": "^2.15.8",
+    "@nuxtjs/composition-api": "^0.31.0",
     "@nuxtjs/eslint-config": "^8.0.0",
     "@nuxtjs/google-analytics": "^2.4.0",
     "@serverless/components": "^3.18.1",
@@ -104,6 +105,7 @@
     "stylelint-scss": "^4.0.0",
     "tailwind-config-viewer": "^1.6.2",
     "tailwindcss": "^2.2.19",
-    "tencentcloud-sdk-nodejs": "^4.0.247"
+    "tencentcloud-sdk-nodejs": "^4.0.247",
+    "worker-loader": "^3.0.8"
   }
 }
