--- a/packages/@som/blog/package.json
+++ b/packages/@som/blog/package.json
@@ -64,6 +64,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.16.0",
+    "@babel/eslint-parser": "^7.16.3",
     "@babel/plugin-transform-runtime": "^7.16.4",
     "@babel/preset-env": "^7.16.4",
     "@nuxt/postcss8": "^1.1.3",
@@ -75,7 +76,6 @@
     "@types/file-saver": "^2.0.4",
     "@types/tailwindcss": "^2.2.4",
     "@vue/composition-api": "^1.4.0",
-    "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.3",
     "babel-plugin-component": "^1.1.1",
     "babel-plugin-import": "^1.13.3",
