--- a/packages/@som/blog/package.json
+++ b/packages/@som/blog/package.json
@@ -31,6 +31,7 @@
     "@nuxtjs/tailwindcss": "^4.2.1",
     "@tailwindcss/typography": "^0.4.1",
     "@types/qrcode": "^1.4.1",
+    "aegis-web-sdk": "^1.24.46",
     "ansicolor": "^1.1.95",
     "axios": "^0.24.0",
     "copy-text-to-clipboard": "^3.0.1",
