test: for relation-graph

--- a/packages/@som/blog/package.json
+++ b/packages/@som/blog/package.json
@@ -18,7 +18,7 @@
     "sls:info": "components info"
   },
   "dependencies": {
-    "@babel/runtime": "^7.16.5",
+    "@babel/runtime": "^7.16.7",
     "@cloudbase/js-sdk": "^1.7.1",
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-brands-svg-icons": "^5.15.4",
@@ -32,11 +32,11 @@
     "@nuxtjs/tailwindcss": "^4.2.1",
     "@tailwindcss/typography": "^0.5.0",
     "@types/qrcode": "^1.4.2",
-    "aegis-web-sdk": "^1.24.48",
+    "aegis-web-sdk": "^1.24.49",
     "ansicolor": "^1.1.95",
     "axios": "^0.24.0",
     "copy-text-to-clipboard": "^3.0.1",
-    "core-js": "^3.20.0",
+    "core-js": "^3.20.2",
     "dayjs": "^1.10.7",
     "dompurify": "^2.3.4",
     "dplayer": "^1.26.0",
@@ -46,7 +46,7 @@
     "file-saver": "^2.0.5",
     "gemoji": "^7.1.0",
     "github-markdown-css": "^5.1.0",
-    "gsap": "^3.9.0",
+    "gsap": "^3.9.1",
     "is-mobile": "^3.0.0",
     "js-base64": "^3.7.2",
     "js-cookie": "^3.0.1",
@@ -55,20 +55,21 @@
     "marked": "^4.0.8",
     "nuxt": "^2.15.8",
     "qrcode": "^1.5.0",
-    "sitemap": "^7.0.0",
+    "sitemap": "^7.1.0",
     "svg4everybody": "^2.1.9",
     "swiper": "6.8.4",
     "uuid": "^8.3.2",
     "vant": "^2.12.37",
     "vue-aplayer": "^1.6.1",
     "vue-echarts": "6.0.0",
+    "vue-relation-graph": "1.0.0-alpha.1",
     "vuex-persistedstate": "^4.1.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.16.5",
+    "@babel/core": "^7.16.7",
     "@babel/eslint-parser": "^7.16.5",
-    "@babel/plugin-transform-runtime": "^7.16.5",
-    "@babel/preset-env": "^7.16.5",
+    "@babel/plugin-transform-runtime": "^7.16.7",
+    "@babel/preset-env": "^7.16.7",
     "@nuxt/postcss8": "^1.1.3",
     "@nuxt/types": "^2.15.8",
     "@nuxtjs/composition-api": "^0.31.0",
@@ -77,16 +78,16 @@
     "@serverless/components": "^3.18.1",
     "@types/file-saver": "^2.0.4",
     "@types/offscreencanvas": "^2019.6.4",
-    "@types/tailwindcss": "^2.2.4",
-    "@vue/composition-api": "^1.4.2",
+    "@types/tailwindcss": "^3.0.1",
+    "@vue/composition-api": "^1.4.3",
     "babel-loader": "^8.2.3",
     "babel-plugin-component": "^1.1.1",
     "babel-plugin-import": "^1.13.3",
     "cli-progress": "^3.9.1",
-    "cos-nodejs-sdk-v5": "^2.11.4",
+    "cos-nodejs-sdk-v5": "^2.11.6",
     "cross-env": "^7.0.3",
     "dotenv": "^10.0.0",
-    "eslint": "^8.5.0",
+    "eslint": "^8.6.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-nuxt": "^3.1.0",
     "eslint-plugin-prettier": "^4.0.0",
@@ -97,18 +98,18 @@
     "postcss": "^8.4.5",
     "prettier": "^2.5.1",
     "reading-time": "^1.5.0",
-    "sass": "1.45.1",
+    "sass": "1.45.2",
     "sass-loader": "^10.0.0",
     "serverless-config-generator": "^1.0.4",
     "serverless-layer-deployer": "^0.3.0",
-    "stylelint": "^14.1.0",
+    "stylelint": "^14.2.0",
     "stylelint-config-prettier": "^9.0.3",
     "stylelint-config-recommended-scss": "^5.0.2",
     "stylelint-config-standard": "^24.0.0",
     "stylelint-scss": "^4.1.0",
     "tailwind-config-viewer": "^1.6.3",
-    "tailwindcss": "^3.0.7",
-    "tencentcloud-sdk-nodejs": "^4.0.260",
+    "tailwindcss": "^3.0.11",
+    "tencentcloud-sdk-nodejs": "^4.0.266",
     "worker-loader": "^3.0.8"
   }
 }
