--- a/packages/@som/vue2/package.json
+++ b/packages/@som/vue2/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.2",
     "core-js": "^3.6.5",
     "d3": "^7.2.1",
     "d3-org-chart": "^2.6.0",
