--- a/packages/@som/vue2/package.json
+++ b/packages/@som/vue2/package.json
@@ -36,6 +36,7 @@
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-standard": "^5.0.0",
     "eslint-plugin-vue": "^8.2.0",
+    "prettier": "^2.5.1",
     "sass": "^1.47.0",
     "sass-loader": "^8.0.2",
     "typescript": "~4.5.4",
