feat: commit codes

--- a/packages/@som/vue2/package.json
+++ b/packages/@som/vue2/package.json
@@ -14,6 +14,7 @@
     "d3": "^7.3.0",
     "d3-org-chart": "^2.6.0",
     "element-ui": "^2.15.6",
+    "simple-lodash-template-loader": "^1.0.5",
     "vue": "^2.6.11",
     "vue-d3-org-chart": "^0.0.1",
     "vue-router": "^3.2.0",
