--- a/packages/@som/vue2/package.json
+++ b/packages/@som/vue2/package.json
@@ -13,6 +13,7 @@
     "core-js": "^3.6.5",
     "d3": "^7.3.0",
     "d3-org-chart": "^2.6.0",
+    "dayjs": "^1.10.7",
     "element-ui": "^2.15.6",
     "simple-lodash-template-loader": "^1.0.5",
     "vue": "^2.6.11",
