--- a/packages/@som/vue2/.prettierrc
+++ b/packages/@som/vue2/.prettierrc
@@ -4,5 +4,6 @@
   "singleQuote": true,
   "endOfLine": "lf",
   "semi": false,
-  "trailingComma": "none"
+  "trailingComma": "none",
+  "printWidth": 9999
 }
