feat: commit codes

--- a/packages/@som/blog/package.json
+++ b/packages/@som/blog/package.json
@@ -31,6 +31,7 @@
     "@nuxtjs/proxy": "^2.1.0",
     "@nuxtjs/sitemap": "^2.4.0",
     "@nuxtjs/tailwindcss": "^4.2.1",
+    "@popperjs/core": "^2.11.2",
     "@tailwindcss/typography": "^0.5.0",
     "@types/qrcode": "^1.4.2",
     "aegis-web-sdk": "^1.24.49",
@@ -38,6 +39,7 @@
     "axios": "^0.24.0",
     "copy-text-to-clipboard": "^3.0.1",
     "core-js": "^3.20.3",
+    "d3": "^7.3.0",
     "dayjs": "^1.10.7",
     "dompurify": "^2.3.4",
     "dplayer": "^1.26.0",
@@ -80,7 +82,7 @@
     "@types/file-saver": "^2.0.5",
     "@types/offscreencanvas": "^2019.6.4",
     "@types/tailwindcss": "^3.0.2",
-    "@vue/composition-api": "^1.4.3",
+    "@vue/composition-api": "^1.4.4",
     "babel-loader": "^8.2.3",
     "babel-plugin-component": "^1.1.1",
     "babel-plugin-import": "^1.13.3",
