--- a/packages/@som/vue3/package.json
+++ b/packages/@som/vue3/package.json
@@ -8,13 +8,24 @@
   },
   "dependencies": {
     "echarts": "^5.2.2",
+    "element-plus": "^1.3.0-beta.9",
     "vue": "^3.2.25",
-    "vue-echarts": "^6.0.2"
+    "vue-echarts": "^6.0.2",
+    "vue-router": "4"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.10.1",
+    "@typescript-eslint/parser": "^5.10.1",
     "@vitejs/plugin-vue": "^2.0.0",
     "autoprefixer": "^10.4.2",
+    "eslint": "7.12.1",
+    "eslint-config-standard": "^16.0.3",
+    "eslint-plugin-import": "2.22.1",
+    "eslint-plugin-node": "11.1.0",
+    "eslint-plugin-promise": "4.2.1",
+    "eslint-plugin-vue": "^8.3.0",
     "postcss": "^8.4.5",
+    "sass": "^1.49.0",
     "tailwindcss": "^3.0.15",
     "typescript": "^4.4.4",
     "vite": "^2.7.2",
