--- a/packages/@som/vue3/package.json
+++ b/packages/@som/vue3/package.json
@@ -4,7 +4,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "generate:theme":"node scripts/theme.js"
   },
   "dependencies": {
     "echarts": "^5.2.2",
@@ -26,6 +27,7 @@
     "eslint-plugin-vue": "^8.3.0",
     "postcss": "^8.4.5",
     "sass": "^1.49.0",
+    "tailwind-css-variables-theme-generator": "^0.1.1",
     "tailwindcss": "^3.0.15",
     "typescript": "^4.4.4",
     "vite": "^2.7.2",
