feat: add more shit

--- a/packages/@som/vue2/package.json
+++ b/packages/@som/vue2/package.json
@@ -19,6 +19,7 @@
     "d3-org-chart": "^2.6.0",
     "dayjs": "^1.10.7",
     "element-ui": "^2.15.6",
+    "javascript-stringify": "^2.1.0",
     "simple-lodash-template-loader": "^1.0.5",
     "uuid": "^8.3.2",
     "vue": "^2.6.11",
