feat: commit MyWelcome components

--- a/packages/bit/my-workspace/workspace.jsonc
+++ b/packages/bit/my-workspace/workspace.jsonc
@@ -39,6 +39,7 @@
     "packageManager": "teambit.dependencies/pnpm",
     "policy": {
       "dependencies": {
+        "@teambit/base-ui.input.button": "1.0.4",
         "@teambit/eslint-config-bit-react": "~0.0.367",
         "@typescript-eslint/eslint-plugin": "4.29.3",
         "eslint-import-resolver-node": "0.3.6",
