feat: commit codes

--- a/packages/bit/my-workspace/workspace.jsonc
+++ b/packages/bit/my-workspace/workspace.jsonc
@@ -1,7 +1,7 @@
 /**
  * this is the main configuration file of your bit workspace.
  * for full documentation, please see: https://bit.dev/docs/workspace/workspace-configuration
- **/{
+ **/ {
   "$schema": "https://static.bit.dev/teambit/schemas/schema.json",
   /**
    * main configuration of the Bit workspace.
@@ -27,7 +27,7 @@
     /**
      * default scope for all components in workspace.
      **/
-    "defaultScope": "bitorg.experience"
+    "defaultScope": "icebreaker.experience"
   },
   /**
    * main configuration for component dependency resolution.
