feat: commit codes

--- a/packages/@som/vue2/package.json
+++ b/packages/@som/vue2/package.json
@@ -8,16 +8,16 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@formily/core": "^2.0.9",
-    "@formily/element": "^2.0.9",
-    "@formily/vue": "^2.0.9",
-    "@popperjs/core": "^2.11.2",
-    "@vue/composition-api": "^1.4.6",
+    "@formily/core": "^2.0.18",
+    "@formily/element": "^2.0.18",
+    "@formily/vue": "^2.0.18",
+    "@popperjs/core": "^2.11.5",
+    "@vue/composition-api": "^1.4.9",
     "ant-design-vue": "^1.7.8",
-    "core-js": "^3.20.3",
-    "d3": "^7.3.0",
+    "core-js": "^3.21.1",
+    "d3": "^7.4.3",
     "d3-org-chart": "^2.6.0",
-    "dayjs": "^1.10.7",
+    "dayjs": "^1.11.0",
     "element-ui": "^2.15.6",
     "javascript-stringify": "^2.1.0",
     "simple-lodash-template-loader": "^1.0.5",
@@ -30,25 +30,30 @@
   "devDependencies": {
     "@types/d3": "^7.1.0",
     "@types/d3-org-chart": "^2.3.0",
-    "@typescript-eslint/eslint-plugin": "^5.10.0",
-    "@typescript-eslint/parser": "^5.10.0",
-    "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-router": "~4.5.0",
-    "@vue/cli-plugin-typescript": "~4.5.0",
-    "@vue/cli-plugin-vuex": "~4.5.0",
-    "@vue/cli-service": "~4.5.0",
+    "@types/tailwindcss": "^3.0.10",
+    "@typescript-eslint/eslint-plugin": "^5.18.0",
+    "@typescript-eslint/parser": "^5.18.0",
+    "@vue/cli-plugin-babel": "~5.0.4",
+    "@vue/cli-plugin-router": "~5.0.4",
+    "@vue/cli-plugin-typescript": "~5.0.4",
+    "@vue/cli-plugin-vuex": "~5.0.4",
+    "@vue/cli-service": "~5.0.4",
     "@vue/eslint-config-standard": "^6.1.0",
     "@vue/eslint-config-typescript": "^10.0.0",
-    "eslint": "^8.7.0",
-    "eslint-plugin-import": "^2.20.2",
+    "autoprefixer": "^10.4.4",
+    "eslint": "^8.13.0",
+    "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-standard": "^5.0.0",
-    "eslint-plugin-vue": "^8.3.0",
-    "prettier": "^2.5.1",
-    "sass": "^1.48.0",
-    "sass-loader": "^8.0.2",
-    "typescript": "~4.5.4",
+    "eslint-plugin-vue": "^8.6.0",
+    "postcss": "^8.4.12",
+    "prettier": "^2.6.2",
+    "prettier-plugin-tailwindcss": "^0.1.8",
+    "sass": "^1.50.0",
+    "sass-loader": "^12.6.0",
+    "tailwindcss": "^3.0.23",
+    "typescript": "~4.6.3",
     "vue-template-compiler": "^2.6.11"
   }
 }
